# pixt

./: Cargo.toml  README.md  build.rs  index.html
.github/workflows/: deploy.yml
pkg/: .~lock.README.md#  index.html  package.json  pixt.d.ts  pixt.js  pixt_bg.wasm  pixt_bg.wasm.d.ts
src/: cli.rs  img.rs  lib.rs  main.rs  output.rs  render.rs  style.rs
web/: index.html
