[package]
name = "pixt"
version = "1.1.1"
edition = "2024"
license = "MIT"
description = "Terminal Based Cross Platform Image Viewer"
repository = "https://github.com/BiswajitThakur/pixt"
exclude = [
    "screenshots/*",
    ".github/*",
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.25.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "HtmlInputElement",
  "console",
  "File",
  "FileList",
  "FileReader",
  "Event",
]}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2"
