[package]
name = "pixt"
version = "1.1.1"
edition = "2024"
license = "MIT"
description = "Terminal Based Cross Platform Image Viewer"
repository = "https://github.com/BiswajitThakur/pixt"
exclude = [
    "screenshots/*",
    ".github/*",
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.25.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "console",
  "File",
  "FileList",
  "FileReader",
  "Event",
]}

