[package]
name = "pixt"
version = "1.2.0"
edition = "2024"
license = "MIT"
description = "Terminal And Web Based Cross Platform Image To ASCII Art"
repository = "https://github.com/BiswajitThakur/pixt"
exclude = [
    "screenshots/*",
    ".github/*",
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.25.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "console",
  "File",
  "FileList",
  "FileReader",
  "Event",
]}

